<?xml version="1.0"?>
<package>
  <name>lifelong_benchmarking</name>
  <version>0.0.0</version>
  <description>Tool to evaluate the perfomance of lifelong exploration strategies</description>

  <maintainer email="jsantos@lincoln.ac.uk">gestom</maintainer>

  <license>MIT</license>

  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>goemetry_msgs</build_depend>
  <build_depend>strands_navigation_msgs</build_depend>
  <build_depend>strands_navigation</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>


  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_run</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>strands_navigation_msgs</run_depend>
  <run_depend>strands_navigation</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>

  </export>
</package>
